fixes for extra backslashes

--- a/mainnet/2025-07-13-budget-2025/EC/EC-0023-25-nft-cdn/EC-0023-25.jsonld.md
+++ b/mainnet/2025-07-13-budget-2025/EC/EC-0023-25-nft-cdn/EC-0023-25.jsonld.md
@@ -6,7 +6,7 @@ Withdraw ₳605,000 for A free Native Asset CDN for Cardano Developers
 
 This treasury withdrawal funds **A free Native Asset CDN for Cardano Developers** which will provide the following services:
 
-Building reliable infrastructure to display Cardano native assets (NFTs &FTs) efficiently, at scale, can cost upwards of \$100,000 and take 9+ months of development effort. **We propose to deliver a free Native Asset Content Delivery Network (CDN) for Cardano, by making our existing NFTCDN services free to use for anyone building on Cardano**. NFTCDN has been operating since 2022 and provides fast, reliable and resilient multimedia and metadata delivery through a globally distributed CDN, enabling projects to display native assets effortlessly. By removing technical and financial barriers, NFTCDN allows developers to focus on product innovation and growth, accelerate time-to-market, and promotes wider adoption and implementation of native assets within apps across the Cardano ecosystem.
+Building reliable infrastructure to display Cardano native assets (NFTs &FTs) efficiently, at scale, can cost upwards of $100,000 and take 9+ months of development effort. **We propose to deliver a free Native Asset Content Delivery Network (CDN) for Cardano, by making our existing NFTCDN services free to use for anyone building on Cardano**. NFTCDN has been operating since 2022 and provides fast, reliable and resilient multimedia and metadata delivery through a globally distributed CDN, enabling projects to display native assets effortlessly. By removing technical and financial barriers, NFTCDN allows developers to focus on product innovation and growth, accelerate time-to-market, and promotes wider adoption and implementation of native assets within apps across the Cardano ecosystem.
 
 This Treasury Withdrawal is submitted by Intersect on behalf of the vendor. The following sections; Abstract, Motivation, Rationale and Vendor Profile have been sourced from the approved proposal submitted by the Vendor as part of the Intersect budget process.
 
@@ -62,7 +62,7 @@ This proposal aims to solve the following problem:
 
 ### Problem Statement - Cost to Build/Access
 
-- Building native asset delivery infra in-house costs \~\$100,000 and 9+ months (internal benchmarks)
+- Building native asset delivery infra in-house costs ~$100,000 and 9+ months (internal benchmarks)
 
 - NFTCDN solves upfront CAPEX/OPEX needs
 
@@ -88,35 +88,35 @@ This proposal aims to solve the following problem:
 
 - Removes cost barriers, fuelling innovation, faster development, and wider adoption
 
-\$5.5m cost avoidance opportunity & \~39,000 dev. hours savings for products seeking to integrate native asset display -- removing barriers to entry, faster new product launches, improved end-user exp. & increased innovation prospects.
+$5.5m cost avoidance opportunity & ~39,000 dev. hours savings for products seeking to integrate native asset display -- removing barriers to entry, faster new product launches, improved end-user exp. & increased innovation prospects.
 
-#### Tangible Benefits (\$5.5m cost savings \| 39,000 dev. hours savings \| \>17x ROI)
+#### Tangible Benefits ($5.5m cost savings | 39,000 dev. hours savings | >17x ROI)
 
-* Eliminate up-front infrastructure costs (\~\$100,000 per product) for native asset display
+* Eliminate up-front infrastructure costs (~$100,000 per product) for native asset display
 
 * Accelerate product development by 9+ months by removing the need to build and maintain complex, scalable infrastructure
 
-* Immediate cost avoidance opportunity of **\~\$1.5m** and **\~23,400 developer hours** across 15+ existing NFTCDN customers
+* Immediate cost avoidance opportunity of **~$1.5m** and **~23,400 developer hours** across 15+ existing NFTCDN customers
 
-* Additional cost avoidance opportunity of **\~\$1m** and **\~15,600 developer hours** during proposal funding cycle by onboarding at least 10 additional products
+* Additional cost avoidance opportunity of **~$1m** and **~15,600 developer hours** during proposal funding cycle by onboarding at least 10 additional products
 
-* Maintenance & operational cost avoidance of **\$3m** for 25 NFTCDN users during proposal funding cycle
+* Maintenance & operational cost avoidance of **$3m** for 25 NFTCDN users during proposal funding cycle
 
-* Proposal cost of \~\$320k with a **ROI of 17.20x**
+* Proposal cost of ~$320k with a **ROI of 17.20x**
 
-\# ROI Calculations Breakdown
+# ROI Calculations Breakdown
 
 - **Typical development cost of infrastructure to support native asset display:**
 
-- \~9 months / 1,560 dev hours
+- ~9 months / 1,560 dev hours
 
-- \~\$100k (developer, PM, infra) per product
+- ~$100k (developer, PM, infra) per product
 
 - **Typical annual running & maintenance cost:**
 
-- \~\$100,000 in salaries for labour (back- & front-end, networking, storage, cyber security, admin)
+- ~$100,000 in salaries for labour (back- & front-end, networking, storage, cyber security, admin)
 
-- \~\$20,000 infra cost (servers, hosting, licenses)
+- ~$20,000 infra cost (servers, hosting, licenses)
 
 - **Tasks avoided by using NFTCDN:**
 
@@ -144,27 +144,27 @@ This proposal aims to solve the following problem:
 
 - Dev Hours Savings = 23,400 (1,560 hrs x 15 current projects)
 
-- Labour & Infra Savings = \$1.5M in cost avoidance (\$100k x 15 current projects)
+- Labour & Infra Savings = $1.5M in cost avoidance ($100k x 15 current projects)
 
 - **Savings from +10 new projects onboarded during proposal period (conservative est.)**
 
-- Adds 15,600 dev. hours and \$1M in additional savings for newly onboarded projects into NFTCDN for duration of proposal (18 months)
+- Adds 15,600 dev. hours and $1M in additional savings for newly onboarded projects into NFTCDN for duration of proposal (18 months)
 
 - **Savings for on-going maint. & ops cost (25 projects)**
 
-- Adds \$3m in additional savings (\$100k + \$20k x 25 total projects using NFTCDN)
+- Adds $3m in additional savings ($100k + $20k x 25 total projects using NFTCDN)
 
 - **Total value returned:**
 
-- \~39,000 dev hours saved for initial development
+- ~39,000 dev hours saved for initial development
 
-- \~\$5.5M total ecosystem cost avoidance
+- ~$5.5M total ecosystem cost avoidance
 
-- **Proposal cost:** \~\$320k
+- **Proposal cost:** ~$320k
 
-- **Estimated ROI:** \~17.2x
+- **Estimated ROI:** ~17.2x
 
-- Equivalent of \~19 years of cumulative dev time saved
+- Equivalent of ~19 years of cumulative dev time saved
 
 ####  Intangible Benefits
 
@@ -188,7 +188,7 @@ This proposal aims to solve the following problem:
 
 * **Aligns with Cardano's Goals & Roadmap** -- Directly supports Cardano's 2025 roadmaps goals around simplifying developer experience, increasing real-world utility and improving end-user experience
 
-\# Aligns w/ Proposed Cardano 2025 Goals & Roadmap
+# Aligns w/ Proposed Cardano 2025 Goals & Roadmap
 
 * "Get More Usage" Category
 
@@ -204,7 +204,7 @@ This proposal aims to solve the following problem:
 
 ### Vendor Profile
 
-\# About NFTCDN
+# About NFTCDN
 
 * Established in 2022
 
@@ -218,9 +218,9 @@ This proposal aims to solve the following problem:
 
 * Currently running with 100% uptime since launch
 
-\# How is NFTCDN different from a basic CDN (e.g. Cloudflare, Vercel, etc)
+# How is NFTCDN different from a basic CDN (e.g. Cloudflare, Vercel, etc)
 
-- **NFTCDN is purpose-built for Cardano**: NFTCDN is more than a CDN. Direct API access to \`/metadata\`, \`/image\`, \`/file\` native assets using only their fingerprint ID. Cloudflare offers no blockchain/NFT support; this would have to be custom built by devs.
+- **NFTCDN is purpose-built for Cardano**: NFTCDN is more than a CDN. Direct API access to `/metadata`, `/image`, `/file` native assets using only their fingerprint ID. Cloudflare offers no blockchain/NFT support; this would have to be custom built by devs.
 
 - **Multi-protocol/system support**: NFTCDN auto-handles multimedia storage fetching from IPFS, Arweave, HTTP, on-chain. Cloudflare requires devs to build fetch/parsing logic manually on their own infra setup.
 
@@ -230,9 +230,9 @@ This proposal aims to solve the following problem:
 
 - **Real-time chain indexing**: Native assets state updated live (minting & updating) from chain. Cloudflare requires manual indexing, pointer mgmt, and cache invalidation.
 
-- **Cloudflare TOS risk**: Large or non-web file caching (image, audio, video, 3D files) is restricted; in-production use will violate TOS unless using proprietary paid products (Stream/Images/R2, c. \~\$5k+/yr).
+- **Cloudflare TOS risk**: Large or non-web file caching (image, audio, video, 3D files) is restricted; in-production use will violate TOS unless using proprietary paid products (Stream/Images/R2, c. ~$5k+/yr).
 
-- **Global cross-app caching**: NFTCDN caches assets at the asset level, so cache \`HITS\` benefit all products (websites & dApps). Cloudflare caches per domain/site - no sharing resulting in low CDN performance resulting in higher cache \`MISS\` states.
+- **Global cross-app caching**: NFTCDN caches assets at the asset level, so cache `HITS` benefit all products (websites & dApps). Cloudflare caches per domain/site - no sharing resulting in low CDN performance resulting in higher cache `MISS` states.
 
 - **Built-in content safety**: NFTCDN provides CSP headers + dev. controls over rendering. Cloudflare lacks native asset-specific safeguards, increasing risk of suspension due to embedded malicious multimedia content.
 
@@ -313,4 +313,11 @@ The subsections; Contract Management, Project Delivery, and Budget Management To
 
 # Authors
 
-
+{
+  "name": "Intersect",
+  "witness": {
+    "witnessAlgorithm": "ed25519",
+    "publicKey": "05568f86955e65c1a59df5ac1985449b167c3828dccd00b3da9df36a1cf1c743",
+    "signature": "924b1d13c6ff5d7fa1dd1a92f9348b29c91bfa7f273d1872080d7774ddc0e3c2248b14a48c5b0536135f11185ce2675e7d8812407996b6d7a2983b800f051105"
+  }
+}
