--- a/mainnet/2025-07-13-budget-2025/EMI/EMI-0004-25-builder-dao/EMI-0004-25.jsonld.md
+++ b/mainnet/2025-07-13-budget-2025/EMI/EMI-0004-25-builder-dao/EMI-0004-25.jsonld.md
@@ -50,7 +50,7 @@ Demonstrated value to the Cardano Community includes:
 
 Our team is responsible for building and maintaining Clarity, a governance platform purpose-built for the Cardano ecosystem. Clarity serves as the user-facing interface for interacting with Agora, an open-source, audited library of smart contracts designed for decentralized governance and treasury management.
 
-We have already deployed this infrastructure in production and actively maintain it. Our smart contracts have governed over \$10 million in Total Value Locked (TVL) and are used by four DAOs, each managing six-figure treasuries on-chain. These DAOs use the same tooling and processes that CB DAO will leverage, including member-based voting, proposal submission, temperature checks, and treasury execution fully enforced by smart contracts.
+We have already deployed this infrastructure in production and actively maintain it. Our smart contracts have governed over $10 million in Total Value Locked (TVL) and are used by four DAOs, each managing six-figure treasuries on-chain. These DAOs use the same tooling and processes that CB DAO will leverage, including member-based voting, proposal submission, temperature checks, and treasury execution fully enforced by smart contracts.
 
 In addition to our technical capabilities, we work directly with Cardano ecosystem founders and project teams on a regular basis. Many of these projects are already live on mainnet, and several have expressed intent to participate in CB DAO as members during the initial cohort. This gives us a direct line of communication with the builder community and allows us to ensure early DAO membership includes high-quality, committed teams aligned with CB DAO's mission and KPIs.
 
