--- a/mainnet/2025-07-13-budget-2025/EMI/EMI-0005-25-scoios/EMI-0005-25.jsonld.md
+++ b/mainnet/2025-07-13-budget-2025/EMI/EMI-0005-25-scoios/EMI-0005-25.jsonld.md
@@ -14,7 +14,7 @@ This treasury withdrawal funds one of 39 proposals to give effect to the approve
 
 # Motivation
 
-Funding innovation within blockchain ecosystems presents significant challenges, yet some initiatives shine brightly. Project Catalyst stands out as a prime example, having fueled over 2,100 projects with more than \$150 million, a clear testament to Cardano's dedication to decentralized innovation. Still, persistent hurdles across all ecosystems underscore the need for continued refinement in funding approaches.
+Funding innovation within blockchain ecosystems presents significant challenges, yet some initiatives shine brightly. Project Catalyst stands out as a prime example, having fueled over 2,100 projects with more than $150 million, a clear testament to Cardano's dedication to decentralized innovation. Still, persistent hurdles across all ecosystems underscore the need for continued refinement in funding approaches.
 
 The five critical challenges in blockchain ecosystem innovation funding: concentrated voter power, treasury fund limitations, inadequate impact reporting, uncertain ROI, and inefficient milestone management.
 
@@ -30,7 +30,7 @@ We propose a complementary funding mechanism that addresses these challenges thr
 
 Our extended quadratic funding model calculates voting power using two factors:
 
-1. **Square root of donation amount** (e.g., \$9 donation = 3 votes)
+1. **Square root of donation amount** (e.g., $9 donation = 3 votes)
 
 2. **Logarithmic reputation score** (Impact Score) ranging from 300-850
 
@@ -62,7 +62,7 @@ Our model transforms the treasury from sole funder to catalyst:
 
 - Donations increase projects' chances of receiving matching funds, aligning individual and ecosystem interests
 
-**Example:** A \$1M treasury allocation could attract \$500K in individual donations, yielding \$1.5M total funding while building broader community investment. Please see more details in the "Why this amount" section below.
+**Example:** A $1M treasury allocation could attract $500K in individual donations, yielding $1.5M total funding while building broader community investment. Please see more details in the "Why this amount" section below.
 
 ### 3. Standardized Impact Reporting
 
