--- a/mainnet/2025-07-13-budget-2025/EMI/EMI-0006-25-flow-desk/EMI-0006-25.jsonld.md
+++ b/mainnet/2025-07-13-budget-2025/EMI/EMI-0006-25-flow-desk/EMI-0006-25.jsonld.md
@@ -46,7 +46,7 @@ Budget: Up to 1,500,000 USD (3m ADA at a reference price of 0.5 USD / ADA).
 
 Notes:
 
-- Top-tier exchanges might ask a listing fee \> 500,000 USD. An indicative quote from one top-tier exchange would be around 1m USD of token allocation.
+- Top-tier exchanges might ask a listing fee > 500,000 USD. An indicative quote from one top-tier exchange would be around 1m USD of token allocation.
 
 - Not more than 500k USD (1m ADA) will be allocated for 1 CNT / Exchange.
 
@@ -56,17 +56,17 @@ Notes:
 
 - Flow for a Cardano project to request funds to get listed on an exchange:
 
-=\> 1 Cardano project with a CNT
+=> 1 Cardano project with a CNT
 
-=\> Project agrees with the exchange on a listing offer
+=> Project agrees with the exchange on a listing offer
 
-=\> Flowdesk Exchange Listing Criteria Assessment
+=> Flowdesk Exchange Listing Criteria Assessment
 
-=\> Decision
+=> Decision
 
-=\> If successful, exchange directly receives funding from Intersect for listing the CNT
+=> If successful, exchange directly receives funding from Intersect for listing the CNT
 
-=\> CNT is listed on the exchange.
+=> CNT is listed on the exchange.
 
 2- Market Making Fee Pool:
 
@@ -80,19 +80,19 @@ Budget: 63,000 USD (126,000 ADA at a reference price of 0.5 USD / ADA).
 
 Notes:
 
-- Intersect \> Cardano Project \> pays Flowdesk monthly retainer for MMAAS business.
+- Intersect > Cardano Project > pays Flowdesk monthly retainer for MMAAS business.
 
 - Flowdesk does NOT receive any funds from the Intersect budget during this process (including no transaction fee, commission, etc.).
 
 - Flow for a Cardano project to request funds for MMAAS with Flowdesk:
 
-=\> Cardano projects
+=> Cardano projects
 
-=\> Project agrees with Flowdesk on a MMAAS offering
+=> Project agrees with Flowdesk on a MMAAS offering
 
-=\> Cardano project receives funding from Intersect
+=> Cardano project receives funding from Intersect
 
-=\> Flowdesk launches the MMAAS service.
+=> Flowdesk launches the MMAAS service.
 
 ### Vendor Profile
 
@@ -176,8 +176,8 @@ The subsections; Contract Management, Project Delivery, and Budget Management To
 - [Details of all successful proposals (CSV)](ipfs://bafybeicwrop4q7xvnyjdd5drumbe56sqtm5lbe2ul3c262zt4hgguzdycm)
 - [Automating Accountability: Cardano's Smart Contract Framework Blog](ipfs://bafybeihqx4ae72z7suqfnxrpqpqithp43cai7o2uuewnqtezgaoyc3ptyq)
 - [Sundae Labs Budget Management Smart Contracts Github Repository](https://github.com/SundaeSwap-finance/treasury-contracts)
-- [Budget Management Smart Contracts TxPipe Audit Report](ipfs://)
-- [Budget Management Smart Contracts MLabs Audit Report](ipfs://)
+- [Budget Management Smart Contracts TxPipe Audit Report](ipfs://bafybeiccnwejbgj43wo6hrlseckkkmprtoqc5cfuy2hesm6c6yealwho3e)
+- [Budget Management Smart Contracts MLabs Audit Report](ipfs://bafybeiah5fnjhda5hemj3qvaehc4mre3qllqzw2l7mkdsguytn4ftgafw4)
 
 # Authors
 
