--- a/mainnet/2025-07-13-budget-2025/EMI/EMI-0008-25-RWA/EMI-0008-25.jsonld.md
+++ b/mainnet/2025-07-13-budget-2025/EMI/EMI-0008-25-RWA/EMI-0008-25.jsonld.md
@@ -6,9 +6,9 @@ Withdraw ₳3,000,000 for High-yield RWA Asset for Cardano: Tokenized Real Estat
 
 This treasury withdrawal funds **High-yield RWA Asset for Cardano : Tokenized Real Estate** which will provide the following services:
 
-Haus is building an open-source Tokenized Home Equity Liquidity Protocol to unlock the \$16 trillion in illiquid home equity sitting in U.S. residential real estate. By leveraging blockchain technology, our platform enables homeowners to sell fractional ownership of their home equity, instantly accessing liquidity while allowing investors to gain exposure to real estate appreciation.
+Haus is building an open-source Tokenized Home Equity Liquidity Protocol to unlock the $16 trillion in illiquid home equity sitting in U.S. residential real estate. By leveraging blockchain technology, our platform enables homeowners to sell fractional ownership of their home equity, instantly accessing liquidity while allowing investors to gain exposure to real estate appreciation.
 
-We have already prototyped and deployed this model on a private Ethereum blockchain, securing \$20 million in Total Value Locked (TVL). With this proposal, we aim to transition HausCoin and the liquidity protocol to Cardano, leveraging its secure, scalable, and cost-effective infrastructure to power a decentralized marketplace for home equity trading.
+We have already prototyped and deployed this model on a private Ethereum blockchain, securing $20 million in Total Value Locked (TVL). With this proposal, we aim to transition HausCoin and the liquidity protocol to Cardano, leveraging its secure, scalable, and cost-effective infrastructure to power a decentralized marketplace for home equity trading.
 
 This Treasury Withdrawal is submitted by Intersect on behalf of the vendor. The following sections; Abstract, Motivation, Rationale and Vendor Profile have been sourced from the approved proposal submitted by the Vendor as part of the Intersect budget process.
 
@@ -24,37 +24,37 @@ Many homeowners are asset-rich but cash-poor, lacking access to liquidity tied u
 
 ### Project Solution
 
-\### Tokenizing Home Equity on Cardano:
+### Tokenizing Home Equity on Cardano:
 
 - Haus will move its existing liquidity protocol onto Cardano's mainnet, allowing homeowners to tokenize and sell portions of their home equity directly to investors.
 
 - This will create an efficient and scalable real estate-backed asset class, providing homeowners with cash liquidity and investors with a share in home appreciation.
 
-\### Launching HausCoin on Cardano:
+### Launching HausCoin on Cardano:
 
 - Haus will issue HausCoin, a real estate-backed token enabling home equity trading at scale.
 
 - Investors will be able to buy, sell, and trade tokenized real estate assets, unlocking new DeFi use cases for real-world assets (RWAs).
 
-\### Leveraging an Existing 30,000-User Waitlist (\$4.1B in TVL):
+### Leveraging an Existing 30,000-User Waitlist ($4.1B in TVL):
 
-- Haus already has a 30,000-person waitlist representing \$4.1 billion in Total Home Equity Value (TVL).
+- Haus already has a 30,000-person waitlist representing $4.1 billion in Total Home Equity Value (TVL).
 
 - A fraction of this TVL will be onboarded to Cardano, driving real-world adoption of the protocol.
 
-\### Building a Legal Framework for Compliance:
+### Building a Legal Framework for Compliance:
 
 - Haus will develop a regulatory-compliant framework for issuing and trading tokenized real estate in the U.S., EU and international markets.
 
 - Legal and financial structuring will ensure seamless integration with traditional real estate markets.
 
-\### Deploying Liquidity Pools & Market Infrastructure:
+### Deploying Liquidity Pools & Market Infrastructure:
 
 - Haus will establish liquidity pools to facilitate instant trading and lending of home equity tokens.
 
 - This will support DeFi integration, enabling real estate-backed lending, yield farming, and staking mechanisms.
 
-\### Product Completion & Market Expansion:
+### Product Completion & Market Expansion:
 
 - Funding will be used to finalize product development, enhance the user experience, and integrate with key blockchain ecosystems.
 
@@ -62,43 +62,43 @@ Many homeowners are asset-rich but cash-poor, lacking access to liquidity tied u
 
 ### Vendor Profile
 
-\## Relevant Experience & Track Record
+## Relevant Experience & Track Record
 
 Haus is led by a seasoned team of experts in blockchain, fintech, real estate, and technology, with a proven track record of scaling businesses, executing blockchain projects, and driving financial innovation.
 
-\### 1. Leadership Team with Deep Industry Expertise
+### 1. Leadership Team with Deep Industry Expertise
 
-**Siddarth (CEO)** -- A product and tech executive with \$1B+ P&L and 20+ years as a real estate investor.
+**Siddarth (CEO)** -- A product and tech executive with $1B+ P&L and 20+ years as a real estate investor.
 
-- Turned around a \$2B public company leading to a \$6.4B private equity exit through product and engineering innovation.
+- Turned around a $2B public company leading to a $6.4B private equity exit through product and engineering innovation.
 
-- Built a \$500M revenue AI platform at Amazon.
+- Built a $500M revenue AI platform at Amazon.
 
-- Scaled (NYSE: PL) from \$2M to \$140M revenue, leading strategic acquisitions including Google's Terra Bella in a \$2.8B exit.
+- Scaled (NYSE: PL) from $2M to $140M revenue, leading strategic acquisitions including Google's Terra Bella in a $2.8B exit.
 
-- Launched Microsoft Surface 3 (\$0 to \$475M revenue) and developed the first Android phone at Google.
+- Launched Microsoft Surface 3 ($0 to $475M revenue) and developed the first Android phone at Google.
 
 **Rakesh Pullabhatla (COO)** -- A financial and operations expert, blockchain specialist, and fintech/proptech strategist.
 
 - COO/CFO Consultant at multiple Layer 1 blockchain projects (Nodle, Astar, Oasis, Metallicus) and several DeFi and NFT ventures.
 
-- Director at Planet Labs (NYSE: PL) -- Led company expansion from 30 to 650 employees, growing revenue from \$0 to \$150M ARR, leading to a \$2.8B IPO
+- Director at Planet Labs (NYSE: PL) -- Led company expansion from 30 to 650 employees, growing revenue from $0 to $150M ARR, leading to a $2.8B IPO
 
-- Director at Boku (AIM: BOKU) -- Helped build a global mobile payments platform in 120+ countries, leading to a \$500M IPO
+- Director at Boku (AIM: BOKU) -- Helped build a global mobile payments platform in 120+ countries, leading to a $500M IPO
 
 - Former Economics Consultant at Cornerstone Research and held product & operational roles at Apple, Textron, and Fortune 150 companies.
 
-\### 2. Proven Execution & Market Validation
+### 2. Proven Execution & Market Validation
 
-- Developed and tested the Haus Liquidity Protocol, completing 36 tokenized home transactions with \$20M in TVL.
+- Developed and tested the Haus Liquidity Protocol, completing 36 tokenized home transactions with $20M in TVL.
 
-- Strong Product-Market Fit, validated by a 30,000-user waitlist with \$4.1B in tokenizable home equity.
+- Strong Product-Market Fit, validated by a 30,000-user waitlist with $4.1B in tokenizable home equity.
 
 - Early DeFi Partnerships, including promising conversations with MinSwap and other liquidity providers.
 
-\### 3. Real Estate, Blockchain, and Legal Readiness
+### 3. Real Estate, Blockchain, and Legal Readiness
 
-- Haus is already operational, with \$25M+ AUM, \$20M TVL, and \$150K ARR, proving its financial viability.
+- Haus is already operational, with $25M+ AUM, $20M TVL, and $150K ARR, proving its financial viability.
 
 - Regulatory compliance focus, with an ongoing legal framework for HausCoin (SEC reg D approved) and tokenized real estate investing.
 
