--- a/mainnet/2025-07-13-budget-2025/EMI/EMI-0009-25-anzens/EMI-0009-25.jsonld.md
+++ b/mainnet/2025-07-13-budget-2025/EMI/EMI-0009-25-anzens/EMI-0009-25.jsonld.md
@@ -36,7 +36,7 @@ Impact:The absence of institutional-grade custody solutions stifles liquidity, r
 
 2. Limited Availability of Cardano Native Assets on Exchanges & OTC Desks:
 
-Despite Cardano's \$700M+ DeFi ecosystem, its native assets---including stablecoins---are severely underrepresented on centralized exchanges (CEXs) and OTC desks.
+Despite Cardano's $700M+ DeFi ecosystem, its native assets---including stablecoins---are severely underrepresented on centralized exchanges (CEXs) and OTC desks.
 
 -Few trading pairs for Cardano assets (eg. ADA/USDA, USDA/USDT)
 
@@ -50,9 +50,9 @@ Impact: Without deep exchange liquidity, traders and institutions cannot efficie
 
 Stablecoins mainly serve crypto trading, with USDC gaining enterprise use---while Cardano's stablecoins remain underutilized across real-world sectors:
 
--Cross-border B2B payments (\$31.6 trillion market)
+-Cross-border B2B payments ($31.6 trillion market)
 
--Remittances (\$850 billion market and where low fees matter)
+-Remittances ($850 billion market and where low fees matter)
 
 -Payroll & merchant settlements
 
@@ -64,7 +64,7 @@ Impact: Without real-world use cases, Cardano's stablecoins are limited to DeFi
 
 Users in emerging markets (Africa, LATAM, Asia) struggle to convert ADA and Cardano-native assets into local fiat due to:
 
--High fees (5-7% for card-based ramps vs. \~1% for local bank transfers
+-High fees (5-7% for card-based ramps vs. ~1% for local bank transfers
 
 -Limited payout network & banking access
 
@@ -78,7 +78,7 @@ Ethereum & Ripple are expanding stablecoin adoption. Without custody solutions, 
 
 a. Wallet Support for Cardano Native Assets: USDA is pursuing strategic partnerships with firms like Zoida Markets, and in talks with BitGo, Zodia Custody, CipherBC, etc. Our goal is to enhance Cardano Native Assets by improving reach, reliability, and pricing through collaboration with key custodians, and wallet infrastructure providers---ultimately boosting distribution, liquidity and user adoption.
 
-b. Availability of USDA / Native Assets on Exchanges, OTC Desks and NEO Banks: Anzens is focused on bringing USDA to CEXs, NEO banks, OTC desks, and other key distributors to expand its reach. By enabling USDA pairs for Cardano tokens on exchanges, we aim to boost usability, drive adoption through spot listings, and support broader participation via derivatives trading. Enabling USDA with NEO banks would offer USDA \<\> Fiat pairs in exotic currencies
+b. Availability of USDA / Native Assets on Exchanges, OTC Desks and NEO Banks: Anzens is focused on bringing USDA to CEXs, NEO banks, OTC desks, and other key distributors to expand its reach. By enabling USDA pairs for Cardano tokens on exchanges, we aim to boost usability, drive adoption through spot listings, and support broader participation via derivatives trading. Enabling USDA with NEO banks would offer USDA <> Fiat pairs in exotic currencies
 
 c. Drive USDA adoption to unlock real-world utility: Anzens would be initiating cross integration with real estate developers, remittance companies and other payment companies to bring USDA as part of their backend settlement network, helping Cardano gain adoption beyond the crypto space.
 
