--- a/mainnet/2025-07-13-budget-2025/EC/EC-0019-25-bloxbean/EC-0019-25.jsonld.md
+++ b/mainnet/2025-07-13-budget-2025/EC/EC-0019-25-bloxbean/EC-0019-25.jsonld.md
@@ -54,7 +54,7 @@ This proposal seeks funding to hire one additional full-time developer through B
 
 BloxBean Tools Overview
 
-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\--
+----------------------
 
 **Cardano Client Lib (CCL):** A powerful off-chain Java SDK designed for Java/Scala/Kotlin developers to build and submit all types of transactions to the Cardano Blockchain. Used by many Java and Scala developers in the community.
 
@@ -163,4 +163,11 @@ The subsections; Contract Management, Project Delivery, and Budget Management To
 
 # Authors
 
-
+{
+  "name": "Intersect",
+  "witness": {
+    "witnessAlgorithm": "ed25519",
+    "publicKey": "05568f86955e65c1a59df5ac1985449b167c3828dccd00b3da9df36a1cf1c743",
+    "signature": "e42c6293317a28f29b16053342509fc4a45b8dc23b1a64aa871f5718aa29f427f0820f2243a04c8034f7d126b44110be24fb742faaae8ba4eb55b286d3303d06"
+  }
+}
