--- a/mainnet/2025-07-13-budget-2025/EMI/EMI-0003-25-global-events/EMI-0003-25.jsonld.md
+++ b/mainnet/2025-07-13-budget-2025/EMI/EMI-0003-25-global-events/EMI-0003-25.jsonld.md
@@ -124,4 +124,11 @@ The subsections; Contract Management, Project Delivery, and Budget Management To
 
 # Authors
 
-
+{
+  "name": "Intersect",
+  "witness": {
+    "witnessAlgorithm": "ed25519",
+    "publicKey": "05568f86955e65c1a59df5ac1985449b167c3828dccd00b3da9df36a1cf1c743",
+    "signature": "c987ecc2791a64af7a1d19e48637c7f1eb6762c95b1b70a598135104c2c20da97b3cdd5463b9ca3cae24aedf275d78571bdd71f44dc1c2f5185a7b7ef4a8aa08"
+  }
+}
