--- a/mainnet/2025-07-13-budget-2025/EG/EG-0003-25-beyond-mvg/EG-0003-25.jsonld.md
+++ b/mainnet/2025-07-13-budget-2025/EG/EG-0003-25-beyond-mvg/EG-0003-25.jsonld.md
@@ -1,6 +1,6 @@
 # Title
 
-Withdraw ₳592,780 for Beyond Minimum Viable Governance: Iteratively Improving....
+Withdraw ₳592,780 for Beyond Minimum Viable Governance: Iteratively Improvin....
 
 # Abstract
 
@@ -138,11 +138,4 @@ The subsections; Contract Management, Project Delivery, and Budget Management To
 
 # Authors
 
-{
-  "name": "Intersect",
-  "witness": {
-    "witnessAlgorithm": "ed25519",
-    "publicKey": "05568f86955e65c1a59df5ac1985449b167c3828dccd00b3da9df36a1cf1c743",
-    "signature": "898a4ff5d4063ebac2a8c1c9e5229e985e9b8b7b8e4ed91334fe7741d78d48678e8d5e44b78df67e8ddba0e61d7b12f412a7b58ff467a9e9dd0d70b7c4df1d0c"
-  }
-}
+
